  Namegen.to_avoid                      ... equivalent substitute is Names.Id.List.mem

We renamed the following modules:

  Context.ListNamed -> Context.Compacted

The following type aliases where removed

  Context.section_context    ... it was just an alias for "Context.Named.t" which is still available

The module Constrarg was merged into Stdarg.

** Ltac API **

Many Ltac specific API has been moved in its own ltac/ folder. Amongst other
important things:

- Pcoq.Tactic -> Pltac
- Constrarg.wit_tactic -> Tacarg.wit_tactic
- Constrarg.wit_ltac -> Tacarg.wit_ltac
- API below ltac/ that accepted a *_tactic_expr now accept a *_generic_argument
  instead
- Some printing functions were moved from Pptactic to Pputils
- A part of Tacexpr has been moved to Tactypes
- The TacFun tactic expression constructor now takes a `Name.t list` for the 
  variable list rather than an `Id.t option list`.

The folder itself has been turned into a plugin. This does not change much,
but because it is a packed plugin, it may wreak havoc for third-party plugins
depending on any module defined in the ltac/ directory. Namely, even if
everything looks OK at compile time, a plugin can fail to load at link time
because it mistakenly looks for a module Foo instead of Ltac_plugin.Foo, with
an error of the form:

Error: while loading myplugin.cmxs, no implementation available for Foo.

In particular, most EXTEND macros will trigger this problem even if they
seemingly do not use any Ltac module, as their expansion do.

The solution is simple, and consists in adding a statement "open Ltac_plugin"
in each file using a Ltac module, before such a module is actually called. An
alternative solution would be to fully qualify Ltac modules, e.g. turning any
call to Tacinterp into Ltac_plugin.Tacinterp. Note that this solution does not
work for EXTEND macros though.

** Error handling **

- All error functions now take an optional parameter `?loc:Loc.t`. For